// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Appointment screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
    dir="auto"
  >
    Appointments
  </div>
</div>
`;

exports[`renders Documents screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
    dir="auto"
  >
    Patient Documents
  </div>
</div>
`;

exports[`renders Header screen correctly 1`] = `
<div
  className="css-view-1dbjc4n r-paddingBottom-k8qxaj r-paddingLeft-1hfyk0a r-paddingRight-hxflta r-paddingTop-10xqauy"
>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "rgba(255,50,100,1.00)",
        "fontFamily": "FontAwesome5_Solid",
        "fontSize": "32px",
        "fontStyle": "normal",
        "fontWeight": "normal",
      }
    }
  >
    
  </div>
  <div
    className="css-text-901oao r-color-jwli3a r-fontSize-adyw6z r-fontWeight-vw2c0b r-paddingTop-glunga"
    dir="auto"
  >
    Welcome Jena
  </div>
</div>
`;

exports[`renders Home screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-eqz5dr r-paddingTop-1knelpx"
  >
    <div
      className="css-view-1dbjc4n r-paddingTop-1knelpx"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Profile"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Profile
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Lists"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Lists
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Documents"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Documents
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Appointment"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Appointment
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Accounting"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Accounting
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-1kihuf0 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-justifyContent-1d7fvdj r-marginHorizontal-1ludzj4 r-marginVertical-zccstu r-minWidth-1dfn399 r-paddingHorizontal-d9fdf6 r-paddingVertical-tvv088 r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          data-testid="Reports"
        >
          <div
            className="css-text-901oao r-alignSelf-1kihuf0 r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
            dir="auto"
          >
            Reports
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Lists screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1d7fvdj r-paddingHorizontal-w1sl8e"
  >
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-marginTop-6ity3w r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Medications
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-18u37iz r-justifyContent-a2tzq0"
    >
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Drug
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Start Date
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        End Date
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Referrer
      </div>
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-marginTop-6ity3w r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Medications Allergy List
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-18u37iz r-justifyContent-a2tzq0"
    >
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Title
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Reported Date
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Referrer
      </div>
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-marginTop-6ity3w r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Issues List
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-18u37iz r-justifyContent-a2tzq0"
    >
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Title
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Reported Date
      </div>
      <div
        className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
        dir="auto"
      >
        Referrer
      </div>
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-marginTop-6ity3w r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Amendment Lists
    </div>
    <div
      className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      No Results
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-marginTop-6ity3w r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Lab Results
    </div>
    <div
      className="css-text-901oao r-alignItems-1habvwh r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      No Results
    </div>
  </div>
</div>
`;

exports[`renders Profile screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-18u37iz r-justifyContent-1wtj0ep r-marginTop-6ity3w"
  >
    <div
      className="css-text-901oao r-alignSelf-k200y r-color-v258g r-fontSize-adyw6z r-fontWeight-majxgm r-paddingHorizontal-d9fdf6"
      dir="auto"
    >
      Jena
       
      Doe
    </div>
    <div
      className="css-view-1dbjc4n r-alignSelf-173mn98 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-marginRight-acz6fz r-maxWidth-xllap1 r-paddingHorizontal-1j3t67a r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
      onClick={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "WebkitTransitionDuration": "0s",
          "transitionDuration": "0s",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-text-901oao r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
        dir="auto"
      >
        Edit
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1d7fvdj r-marginTop-1x0uki6 r-paddingHorizontal-w1sl8e"
  >
    <div
      className="css-text-901oao r-backgroundColor-1rf9rz2 r-color-v258g r-fontSize-1i10wst r-fontWeight-majxgm r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Profile Demographics
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1pnm7ga r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Who
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      female
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      1985-02-09
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      Single
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1pnm7ga r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Contact
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      7 Rainbow
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      Hamilton
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      Ontario
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      L20 KE2
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      Canada
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      patient@email.ca
    </div>
    <div
      className="css-text-901oao r-backgroundColor-1pnm7ga r-color-v258g r-fontSize-ubezar r-paddingHorizontal-1p4rafz r-paddingVertical-1cy8qmm"
      dir="auto"
    >
      Choices
    </div>
    <div
      className="css-text-901oao r-color-v258g r-fontSize-1b43r93 r-paddingHorizontal-1p4rafz r-paddingVertical-1vvnge1"
      dir="auto"
    >
      Provider
    </div>
  </div>
</div>
`;

exports[`renders ProfileEdit screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1d7fvdj r-marginTop-1x0uki6 r-paddingHorizontal-w1sl8e"
  >
    <div
      className="css-view-1dbjc4n r-alignSelf-173mn98 r-backgroundColor-1rf9rz2 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-maxWidth-r2y082 r-paddingHorizontal-1j3t67a r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
      onClick={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "WebkitTransitionDuration": "0s",
          "transitionDuration": "0s",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-text-901oao r-color-jwli3a r-fontSize-adyw6z r-fontWeight-majxgm"
        dir="auto"
      >
        Save
      </div>
    </div>
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="First Name"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="last Name"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Gender"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      inputMode="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="DOB: mm-dd-yyyy"
      readOnly={false}
      spellCheck={true}
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Marital status"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Address"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="City"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="State"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Postal Code"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Country"
      readOnly={false}
      spellCheck={true}
      type="text"
      value=""
    />
    <input
      autoCapitalize="sentences"
      autoComplete="on"
      autoCorrect="on"
      className="css-textinput-11aywtz r-backgroundColor-1pnm7ga r-borderColor-1drizk4 r-marginVertical-zg41ew r-paddingHorizontal-utggzx r-paddingVertical-1vvnge1 r-placeholderTextColor-8rsm64"
      dir="auto"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      placeholder="Contact Email"
      readOnly={false}
      spellCheck={true}
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`renders Reports screen correctly 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
    dir="auto"
  >
    Reports
  </div>
</div>
`;
